# cdp-final-project

./: Animal_Shelter.drawio  README.md  animal-shelter-v1.cabal  cabal.project  default.nix  donation-contract.cabal  hie.yaml  plutus-starter.cabal  release.nix  shell.nix
.devcontainer/: devcontainer.json
animal-shelter/: animal-shelter.cabal  cabal.project  nft-mint-V2.plutus
animal-shelter-v1/: animal-shelter-v1.cabal
animal-shelter-v1/src/: AnimalShelter.hs  NFT.hs
animal-shelter-v2/: cabal.project
animal-shelter-v2/src/: NFTMint.hs  README
animal-shelter/src/: NFTMint.hs  NFTMint_old.hs
nix/: default.nix
nix/pkgs/haskell/: haskell.nix
scripts/: payment.addr  payment.skey  payment.vkey  policy.script  policy.skey  policy.vkey  policyID  protocol.json
src/: DonateAndMint.hs  Donation.hs  Free.hs  NFT.hs  Signed.hs  Solution1.hs  Solution2.hs  Trace.hs
