Cabal-Version:      2.4
Name:               plutus-script
Version:            0.1.0.0
Author:             Franklin Chua
Maintainer:         franklin.chua@fireclay.ph
Build-Type:         Simple
Copyright:          © 2022 Franklin Chua
-- License:            Apache-2.0
-- License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     NFTMint
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
